--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <video autoplay loop muted plays-inline class="back-video">
-        <source src="o_circulo.mp4" type="video/mp4">
+        <source src="/Gestão de produtos/func/o_circulo.mp4" type="video/mp4">
     </video> 
 
     <header>
         <h2 class="logo">Logo</h2>
         <nav class="navegation">
-            <a href="#">Home</a>
-            <a href="#">Sobre Nós</a>
-            <a href="#">Serviços</a>
-            <a href="#">Contato</a>
+            <a href="/index.html">Home</a>
+            <a href="/Sub-site/Sobre nós.html">Sobre Nós</a>
+            <a href="/Sub-site/Serviços.html">Serviços</a>
+            <a href="/Sub-site/Contato.html">Contato</a>
             <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
@@ -50,7 +50,7 @@
                     <label><input type="checkbox">Remember me</label>
                     <a href="#">Forgot Password?</a>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn"><a href="/Gestão de produtos/func/index.html">Login</a></button>
                 <div class="login-register">
                     <p>Don't have an account?<a href="#" onclick="register()" class="register-link">Register</a></p>
                 </div>
@@ -84,7 +84,7 @@
                 <div class="remember-forgot">
                     <label><input type="checkbox" required>I agree to the terms & conditions</label>
                 </div>
-                <button type="submit" class="btn">Register</button>
+                <button type="submit" class="btn"><a href="/Gestão de produtos/func/index.html">Register</a></button>
                 <div class="login-register">
                     <p>Already have an account? <a href="#" 
                         class="login-link">Login</a></p>
@@ -94,7 +94,7 @@
 
     </div>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
