--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </video> 
 
     <header>
-        <h2 class="logo">Logo</h2>
+        <img src="/LogoSys.png" alt="some text" width="150" height="90">
         <nav class="navegation">
             <a href="/index.html">Home</a>
             <a href="/Sub-site/Sobre nós.html">Sobre Nós</a>
