--- a/Sub-site/Sobre nós.html
+++ b/Sub-site/Sobre nós.html
@@ -62,7 +62,7 @@
             <form action="#">
                 <div class="info">
                     <img class="fachada" src="/Sub-site/Fachada.jpg">
-                    <p>Sys Tech é uma empresa especializada em facilitar a gestão de banco de dados de seus clientes. Com uma equipe altamente capacitada e experiente, a empresa oferece soluções customizadas e inovadoras para atender as necessidades específicas de cada cliente.
+                    <p class="Psobrenos">Sys Tech é uma empresa especializada em facilitar a gestão de banco de dados de seus clientes. Com uma equipe altamente capacitada e experiente, a empresa oferece soluções customizadas e inovadoras para atender as necessidades específicas de cada cliente.
                     A gestão de banco de dados é uma tarefa crucial para o bom funcionamento de uma empresa. É necessário armazenar e gerenciar grandes quantidades de informações de maneira eficiente e segura, 
                     para que elas possam ser acessadas e utilizadas de forma rápida e precisa.
                     A Sys Tech oferece uma ampla variedade de serviços relacionados à gestão de banco de dados, incluindo o design, implementação e manutenção de sistemas de gerenciamento de banco de dados (DBMS).<br> 
