--- a/Sub-site/Serviços.html
+++ b/Sub-site/Serviços.html
@@ -14,7 +14,7 @@
     </video> 
 
     <header>
-        <img src="/LogoSys.png" alt="some text" width="150" height="90">
+        <img class="logo" src="/LogoSys.png" alt="some text">
         <nav class="navegation">
             <a href="/Gestão de produtos/func/index.html">Home</a>
             <a href="/Sub-site/Sobre nós.html">Sobre Nós</a>
@@ -60,6 +60,23 @@
         <div class="form-box register">
             <h2>Serviços</h2>
             <form action="#">
+                <div class="info">
+                    <div class="div1">
+                        <img class="Gestão" src="/Sub-site/Gerenciamento de banco de dados.jpg">
+                        <img class="Migração" src="/Sub-site/Gerenciamento de banco de dados.gif">
+                    </div>
+                    
+                    <div class="div2">
+                        <p class="Pgestão">Gerenciamento de Banco de Dados:
+                            A Sys Tech oferece serviços completos de gerenciamento de banco de dados para ajudar as empresas a gerenciar seus dados de forma eficiente. 
+                            Desde o monitoramento do desempenho do banco de dados até a manutenção de rotina e backup, a Sys Tech pode cuidar de todos os aspectos do gerenciamento 
+                            de banco de dados para você, permitindo que você se concentre em seus negócios principais.</p>
+                        <p class="Pmigração">Migração de Banco de Dados:
+                            Se você está procurando migrar seus dados de um banco de dados existente para um novo sistema ou plataforma, a Sys Tech pode ajudá-lo. 
+                            Nossos especialistas em banco de dados têm a experiência necessária para garantir que sua migração seja concluída sem interrupções e sem perda de dados.
+                        </p>
+                    </div>  
+                </div>
                 <!--<div class="input-box">
                     <span class="icon">
                         <ion-icon name="person-outline"></ion-icon>
