--- a/Gestão de produtos/func/index.html
+++ b/Gestão de produtos/func/index.html
@@ -14,7 +14,7 @@
     </video> 
 
     <header>
-        <h2 class="logo">Sys Tech</h2>
+        <img class="logo" src="/LogoSys.png" alt="some text">
         <nav class="navegation">
             <a href="/Gestão de produtos/func/index.html">Home</a>
             <a href="/Sub-site/Sobre nós.html">Sobre Nós</a>
