--- a/Sub-site/produtos.html
+++ b/Sub-site/produtos.html
@@ -62,7 +62,7 @@
             <form action="#">
                 <div class="input-box">
                     <span class="icon">
-                        <ion-icon name="person-outline"></ion-icon>
+                        <ion-icon name="desktop-outline"></ion-icon>
                     </span>
                     <input type="text" required>
                     <label>Produto</label>
