--- a/Sub-site/Serviços.html
+++ b/Sub-site/Serviços.html
@@ -19,7 +19,7 @@
             <a href="/Gestão de produtos/func/index.html">Home</a>
             <a href="/Sub-site/Sobre nós.html">Sobre Nós</a>
             <a href="/Sub-site/Serviços.html">Serviços</a>
-            <a href="/Sub-site/Contato.html">Contato</a>
+            <a href="/Sub-site/Contato.html">Fale conosco</a>
             <!--<button class="btnLogin-popup">Login</button>-->
         </nav>
     </header>
@@ -62,18 +62,22 @@
             <form action="#">
                 <div class="info">
                     <div class="div1">
-                        <img class="Gestão" src="/Sub-site/Gerenciamento de banco de dados.jpg">
                         <img class="Migração" src="/Sub-site/Gerenciamento de banco de dados.gif">
                     </div>
                     
                     <div class="div2">
                         <p class="Pgestão">Gerenciamento de Banco de Dados:
-                            A Sys Tech oferece serviços completos de gerenciamento de banco de dados para ajudar as empresas a gerenciar seus dados de forma eficiente. 
+                            <br>A Sys Tech oferece serviços completos de gerenciamento de banco de dados para ajudar as empresas a gerenciar seus dados de forma eficiente. 
                             Desde o monitoramento do desempenho do banco de dados até a manutenção de rotina e backup, a Sys Tech pode cuidar de todos os aspectos do gerenciamento 
                             de banco de dados para você, permitindo que você se concentre em seus negócios principais.</p>
                         <p class="Pmigração">Migração de Banco de Dados:
-                            Se você está procurando migrar seus dados de um banco de dados existente para um novo sistema ou plataforma, a Sys Tech pode ajudá-lo. 
+                            <br>Se você está procurando migrar seus dados de um banco de dados existente para um novo sistema ou plataforma, a Sys Tech pode ajudá-lo. 
                             Nossos especialistas em banco de dados têm a experiência necessária para garantir que sua migração seja concluída sem interrupções e sem perda de dados.
+                        </p>
+                        <p class="Pdesenvolvimento">Desenvolvimento de Banco de Dados Personalizados:
+                            <br>A Sys Tech oferece serviços de desenvolvimento de banco de dados personalizados para atender às necessidades específicas de cada cliente. 
+                            Seja qual for a sua indústria ou tamanho da empresa, a Sys Tech trabalha em estreita colaboração com você para entender suas necessidades de negócios e 
+                            projetar um banco de dados personalizado para atender às suas necessidades.
                         </p>
                     </div>  
                 </div>
