--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="/index.html">Home</a>
             <a href="/Sub-site/Sobre nós.html">Sobre Nós</a>
             <a href="/Sub-site/Serviços.html">Serviços</a>
-            <a href="/Sub-site/Contato.html">Contato</a>
+            <a href="/Sub-site/Contato.html">Fale conosco</a>
             <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
