--- a/Sub-site/Serviços.html
+++ b/Sub-site/Serviços.html
@@ -75,7 +75,7 @@
                             Nossos especialistas em banco de dados têm a experiência necessária para garantir que sua migração seja concluída sem interrupções e sem perda de dados.
                         </p>
                         <p class="Pdesenvolvimento">Desenvolvimento de Banco de Dados Personalizados:
-                            <br>A Sys Tech oferece serviços de desenvolvimento de banco de dados personalizados para atender às necessidades específicas de cada cliente. 
+                            <br>Nós a Sys Tech oferecemos serviços de desenvolvimento de banco de dados personalizados para atender às necessidades específicas de cada cliente. 
                             Seja qual for a sua indústria ou tamanho da empresa, a Sys Tech trabalha em estreita colaboração com você para entender suas necessidades de negócios e 
                             projetar um banco de dados personalizado para atender às suas necessidades.
                         </p>
