--- a/Gestão de produtos/func/index.html
+++ b/Gestão de produtos/func/index.html
@@ -19,7 +19,7 @@
             <a href="/Gestão de produtos/func/index.html">Home</a>
             <a href="/Sub-site/Sobre nós.html">Sobre Nós</a>
             <a href="/Sub-site/Serviços.html">Serviços</a>
-            <a href="/Sub-site/Fale Conosco.html">Fale Conosco</a>
+            <a href="/Sub-site/Contato.html">Fale Conosco</a>
             <!--<button class="btnLogin-popup">Login</button>-->
         </nav>
     </header>
