--- a/Sub-site/Contato.html
+++ b/Sub-site/Contato.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-box register" required>
-            <h2>Contato</h2>
+            <h2>Fale conosco</h2>
             <form action="#">
                 <!--<div class="input-box">
                     <span class="icon">
