--- a/Sub-site/Contato.html
+++ b/Sub-site/Contato.html
@@ -60,6 +60,28 @@
         <div class="form-box register" required>
             <h2>Fale conosco</h2>
             <form action="#">
+                <div class="input-box">
+    <span class="icon">
+        <ion-icon name="person-outline"></ion-icon>
+    </span>
+    <input type="text" name="name" required>
+    <label>Seu Nome</label>
+</div>
+<div class="input-box">
+    <span class="icon">
+        <ion-icon name="mail-outline"></ion-icon>
+    </span>
+    <input type="email" name="email" required>
+    <label>Seu Email</label>
+</div>
+<div class="input-box">
+    <span class="icon">
+        <ion-icon name="chatbubbles-outline"></ion-icon>
+    </span>
+    <textarea name="message" required></textarea>
+    <label>Sua mensagem</label>
+    <button type="submit" class="btn btn-transparent">Enviar</button>
+</div>
                 <!--<div class="input-box">
                     <span class="icon">
                         <ion-icon name="person-outline"></ion-icon>
