--- a/Sub-site/Serviços.html
+++ b/Sub-site/Serviços.html
@@ -25,10 +25,6 @@
     </header>
 
     <div class="wrapper">
-        <span class="icon-close">
-            <ion-icon name="close"></ion-icon>
-        </span>
-
         <div class="form-box login">
             <h2>Login</h2>
             <form action="#"> 
@@ -66,16 +62,16 @@
                     </div>
                     
                     <div class="div2">
-                        <p class="Pgestão">Gerenciamento de Banco de Dados:
-                            <br>A Sys Tech oferece serviços completos de gerenciamento de banco de dados para ajudar as empresas a gerenciar seus dados de forma eficiente. 
+                        <p class="Pgestão">> Gerenciamento de Banco de Dados:
+                            <br><br>A Sys Tech oferece serviços completos de gerenciamento de banco de dados para ajudar as empresas a gerenciar seus dados de forma eficiente. 
                             Desde o monitoramento do desempenho do banco de dados até a manutenção de rotina e backup, a Sys Tech pode cuidar de todos os aspectos do gerenciamento 
                             de banco de dados para você, permitindo que você se concentre em seus negócios principais.</p>
-                        <p class="Pmigração">Migração de Banco de Dados:
-                            <br>Se você está procurando migrar seus dados de um banco de dados existente para um novo sistema ou plataforma, a Sys Tech pode ajudá-lo. 
+                        <p class="Pmigração">> Migração de Banco de Dados:
+                            <br><br>Se você está procurando migrar seus dados de um banco de dados existente para um novo sistema ou plataforma, a Sys Tech pode ajudá-lo. 
                             Nossos especialistas em banco de dados têm a experiência necessária para garantir que sua migração seja concluída sem interrupções e sem perda de dados.
                         </p>
-                        <p class="Pdesenvolvimento">Desenvolvimento de Banco de Dados Personalizados:
-                            <br>Nós a Sys Tech oferecemos serviços de desenvolvimento de banco de dados personalizados para atender às necessidades específicas de cada cliente. 
+                        <p class="Pdesenvolvimento">> Desenvolvimento de Banco de Dados Personalizados:
+                            <br><br>Nós a Sys Tech oferecemos serviços de desenvolvimento de banco de dados personalizados para atender às necessidades específicas de cada cliente. 
                             Seja qual for a sua indústria ou tamanho da empresa, a Sys Tech trabalha em estreita colaboração com você para entender suas necessidades de negócios e 
                             projetar um banco de dados personalizado para atender às suas necessidades.
                         </p>
