--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-box register">
-            <h2>Regristration</h2>
+            <h2>Registration</h2>
             <form action="#">
                 <div class="input-box">
                     <span class="icon">
