--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox">Remember me</label>
-                    <a href="#">Forgot Password?</a>
+                    <label><input type="checkbox">Lembre-me</label>
+                    <a href="#">Esqueceu a senha?</a>
                 </div>
                 <button type="submit" class="btn"><a href="/Gestão de produtos/func/index.html">Login</a></button>
                 <div class="login-register">
-                    <p>Don't have an account?<a href="#" onclick="register()" class="register-link">Register</a></p>
+                    <p>Não tem uma conta?<a href="#" onclick="register()" class="register-link">Register</a></p>
                 </div>
             </form>
         </div>
@@ -82,11 +82,11 @@
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox" required>I agree to the terms & conditions</label>
+                    <label><input type="checkbox" required>Aceito termos & condições</label>
                 </div>
                 <button type="submit" class="btn"><a href="/Gestão de produtos/func/index.html">Register</a></button>
                 <div class="login-register">
-                    <p>Already have an account? <a href="#" 
+                    <p>Já tem uma conta? <a href="#"
                         class="login-link">Login</a></p>
                 </div>
             </form>
