--- a/index.html
+++ b/index.html
@@ -97,5 +97,11 @@
     <script src="/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    
+    <footer class="footer">
+        <div>
+            <p>Copyright © 2023 SYS TECH | Política de privacidade</p>
+        </div>
+    </footer>
 </body>
 </html>
